# clawdata

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  EXAMPLES.md  FEATURES.md  LICENSE  README.md  _test_delete.py  alembic.ini  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  setup.sh  start-tui.sh  tsconfig.json  turbo.json
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/adapters/: base.py  openclaw.py
app/cli/: __init__.py  agents.py  gateway.py  helpers.py  main.py  output.py  setup.py  skills.py  templates.py
app/models/: __init__.py  agent.py  approval.py  audit.py  behaviour.py  guardrail.py  secret.py  skill.py  task.py  task_run.py  template.py
app/routers/: agents.py  approvals.py  audit.py  behaviour.py  chat.py  connection.py  guardrails.py  lifecycle.py  logs.py  skills.py  tasks.py  templates.py
app/schemas/: agent.py  approval.py  audit.py  behaviour.py  chat.py  guardrail.py  lifecycle.py  secret.py  skill.py  task.py  template.py
app/services/: agent_service.py  approval_service.py  audit_service.py  behaviour_service.py  chat_service.py  guardrail_service.py  heartbeat_sync.py  job_scheduler.py  openclaw_lifecycle.py  secret_service.py  skill_service.py  (+2 more)
data/: .gitkeep  sample_orders.csv
migrations/: env.py
skills/: README.md
src/: cli.ts  index.ts
templates/: README.md
tests/: conftest.py  test_agents.py  test_chat.py  test_lifecycle.py  test_skills.py  test_templates.py
web/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
(+330 files in other folders)
